--- a/SistemaChamadosFiap.Web/Views/Shared/_Layout.cshtml
+++ b/SistemaChamadosFiap.Web/Views/Shared/_Layout.cshtml
@@ -20,7 +20,18 @@
                 @Html.ActionLink("Sistema de chamados FIAP", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav"></ul>
+                <ul class="nav navbar-nav navbar-right">
+                    @if (Request.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink(User.Identity.Name, "Index", "Autenticacao")</li>
+                        <li>@Html.ActionLink("Logout", "Logout", "Autenticacao")</li>
+                        @*<li>@Html.ActionLink("Cadastrar-se", "Criar", "Autenticacao")</li>*@
+                    }
+                    else
+                    {
+                        <li>@Html.ActionLink("Login", "Login", "Autenticacao")</li>
+                    }
+                </ul>
             </div>
         </div>
     </div>
@@ -35,5 +46,6 @@
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+    @RenderSection("scripts", false)
 </body>
 </html>
