Implementado Ajax na Index e vínculo com Cliente no chamado.

--- a/SistemaChamadosFiap.Web/Views/Chamado/Adicionar.cshtml
+++ b/SistemaChamadosFiap.Web/Views/Chamado/Adicionar.cshtml
@@ -11,6 +11,7 @@
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.DtAbertura)
+    @Html.HiddenFor(model => model.IdCliente)
     <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -48,7 +49,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Adicionar" class="btn btn-default" />
+                <input type="submit" value="Salvar chamado" class="btn btn-default" />
             </div>
         </div>
     </div>
