--- a/SistemaChamadosFiap.Web/Views/Home/Index.cshtml
+++ b/SistemaChamadosFiap.Web/Views/Home/Index.cshtml
@@ -4,4 +4,15 @@
 }
 
 <h2>Bem vindo ao Sistema de Chamados FIAP</h2>
-
+<p>Clique nas opções abaixo para navegar</p>
+<ul>
+    <li>
+        @Html.ActionLink("Chamados", "Index", "Chamado")
+    </li>
+    <li>
+        @Html.ActionLink("Atendentes", "Index", "Atendente")
+    </li>
+    <li>
+        @Html.ActionLink("Clientes", "Index", "Cliente")
+    </li>
+</ul>
