--- a/SistemaChamadosFiap.Web/Views/Autenticacao/Index.cshtml
+++ b/SistemaChamadosFiap.Web/Views/Autenticacao/Index.cshtml
@@ -5,4 +5,4 @@
 }
 
 <h2>@ViewBag.Title</h2>
-
+<p>Página de Meu Perfil. Aqui vem informações do perfil do usuário que poderá ser recuperado das Claims.</p>
