--- a/SistemaChamadosFiap.Web/Views/Chamado/Index.cshtml
+++ b/SistemaChamadosFiap.Web/Views/Chamado/Index.cshtml
@@ -40,7 +40,7 @@
 
             $(".chamado-remove").click(function (e) {
 
-                if (!confirm("Deseja excluir um chamado?")) {
+                if (!confirm("Deseja excluir o chamado?")) {
                     e.preventDefault();
                 }
 
