--- a/SistemaChamadosFiap.Web/Views/Cliente/Editar.cshtml
+++ b/SistemaChamadosFiap.Web/Views/Cliente/Editar.cshtml
@@ -1,7 +1,7 @@
-﻿@model SistemaChamadosFiap.Web.Models.AtendenteModel
+﻿@model SistemaChamadosFiap.Web.Models.ClienteModel
 
 @{
-    ViewBag.Title = "Editar atendente";
+    ViewBag.Title = "Editar cliente";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -14,7 +14,6 @@
     <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
-
         <div class="form-group">
             @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -51,7 +50,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Atualizar atendente" class="btn btn-primary" />
+                <input type="submit" value="Atualizar cliente" class="btn btn-primary" />
             </div>
         </div>
     </div>
