--- a/SistemaChamadosFiap.Web/Views/Cliente/Adicionar.cshtml
+++ b/SistemaChamadosFiap.Web/Views/Cliente/Adicionar.cshtml
@@ -1,20 +1,18 @@
-﻿@model SistemaChamadosFiap.Web.Models.AtendenteModel
+﻿@model SistemaChamadosFiap.Web.Models.ClienteModel
 
 @{
-    ViewBag.Title = "Editar atendente";
+    ViewBag.Title = "Adicionar cliente";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>@ViewBag.Title</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Id)
-
         <div class="form-group">
             @Html.LabelFor(model => model.Nome, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -51,7 +49,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Atualizar atendente" class="btn btn-primary" />
+                <input type="submit" value="Salvar cliente" class="btn btn-primary" />
             </div>
         </div>
     </div>
@@ -61,11 +59,10 @@
     @Html.ActionLink("Voltar", "Index")
 </div>
 
+
 @section scripts
 {
     <script src="~/Scripts/jquery.validate.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>
     <script src="~/Scripts/jquery.unobtrusive-ajax.js"></script>
 }
-
-
